src/ball_tracker/log/build_2025-03-16_18-04-18/ball_tracker/stderr.log
  File "/home/peyton/dev_ws/src/ball_tracker/install/ball_tracker/lib/python3.10/site-packages/ball_tracker/image_subscriber.py", line 54
    <?xml version="1.0"?>
    ^
SyntaxError: invalid syntax

